--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,15 @@
     /* background-color: aquamarine; */
     background-image: url(/src/assets/images/ella-olsson-C1Q3qOTlegg-unsplash\ 1.png);
 }
+
 .bg-overlay {
     background-image: linear-gradient(to right top, rgba(55, 140, 47, 0.63), rgba(0, 0, 0, 0.6));
 }
+
 .sidebar-cont {
     background-color: #1F263E;
     border-top-right-radius: 15%;
-    border-style: hidden ;
+    border-style: hidden;
 }
 
 .sidebar-container .ps-sidebar-container {
@@ -22,6 +24,7 @@
 .sidebar-container .ps-sidebar-container .ps-menu-button:hover {
     background-color: rgba(0, 146, 71, 0.1);
 }
+
 .header-content {
     background-image: url(../src/assets/images/header-background.png);
     background-size: cover;
@@ -36,19 +39,19 @@
     width: 50px;
 }
 
-.img-logo {
+/* .img-logo {
     left:8px;
-}
+} */
 
 /* .img-logo span.ps-menu-icon.css-wx7wi4 {
     width:100px !important;
 } */
 
-.sidebar-logo {
+/* .sidebar-logo {
     width: 180px;
     padding-top: 8px;
 
-}
+} */
 
 /* span.ps-menu-icon.css-wx7wi4{
     flex-shrink: 0;
@@ -67,3 +70,71 @@ form .input-icons .form-control, .icon-input .form-control {
     left: .5rem;
     padding-left: 2.5rem;
 }
+
+
+.sidebarIcon {
+    padding-top: 30px;
+}
+
+
+.sidebar-container .ps-sidebar-container .img-logo {
+    margin: 20px 0;
+}
+
+.sidebar-container .ps-sidebar-container .img-logo a:hover {
+    background-color: transparent
+}
+
+.sidebar-container .ps-sidebar-container .img-logo span {
+    width: fit-content;
+}
+
+.img-logo img {
+    width: 75px;
+}
+
+.__web-inspector-hide-shortcut__, .__web-inspector-hide-shortcut__ *, .__web-inspector-hidebefore-shortcut__::before, .__web-inspector-hideafter-shortcut__::after {
+    visibility: hidden !important;
+}
+
+ .line{
+    position: relative;
+    margin: 15px;
+
+
+}
+.line:before {
+    content: "________________________________";
+    color: #6c757d;
+    position: absolute;
+    top: -5px;
+    left: -35px;
+}
+.line:after {
+    content: "________________________________";
+    color:#6c757d;
+    position: absolute;
+    top: -5px;
+    right: -35px;
+}
+
+.card-img-equal-ratio {
+    object-fit: cover;
+    width: 100%;
+    height: 150px; /* You can adjust this value according to your needs */
+    text-align: center;
+   }
+   .prev{
+    background-color: #009247;
+    color: white;
+    border: 1px solid #009247;
+    margin-right: 1px;
+    border-radius: 5px;
+   }
+   .next{
+    background-color: #009247;
+    color: white;
+    border: 1px solid #009247;
+    margin-left: 5px;
+    border-radius: 5px;
+   }
